<resources>
    <string name="app_name">Lab1</string>
    <string name="liczba_ocen">Liczba ocen</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="imie">Imię</string>
    <string name="button">Button</string>
    <string name="przycisk">Oceny</string>
    <string name="radioButton_2_text">2</string>
    <string name="radioButton3_text">3</string>
    <string name="radioButton2_text">2</string>
    <string name="radioButton4_text">4</string>
    <string name="radioButton5_text">5</string>
    <string name="grade2Button_text">2</string>
    <string name="grade3Button_text">3</string>
    <string name="grade4Button_text">4</string>
    <string name="grade5Button_text">5</string>
    <string name="buttonOut_text">Gotowe</string>
</resources>
