<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kolorTla">



    <TextView
        android:id="@+id/etykieta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="etykieta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/ocenyRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"

        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/etykieta"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/ocena2Przycisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade2Button_text"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/ocena3Przycisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade3Button_text"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/ocena4Przycisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade4Button_text"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/ocena5Przycisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade5Button_text"
            android:textSize="14sp" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>